--- a/src/WebBlazor/Components/Pages/ShoppingCart.razor
+++ b/src/WebBlazor/Components/Pages/ShoppingCart.razor
@@ -6,35 +6,35 @@
 @using Application.Cookies
 @inherits OwningComponentBase<IUnitOfWork>
 
-<main class="layout layout__full">
+<main class="layout__content shopping-cart">
     <h3 class="cart-title">Shopping Cart</h3>
 
     @if (CartItems.Any())
     {
-        <div class="cart__item-display">
+        <div class="cart-item-display">
             @foreach (var item in CartItems)
             {
                 <div class="cart-item">
-                    <img src="@item.ProductPhotoUrl" alt="Product photo" class="cart-item__img">
+                    <img src="@item.ProductPhotoUrl" alt="Product photo" class="cart-item__product-img">
                     <h5 class="cart-item__product-name">@item.ProductName</h5>
-                    <p class="cart-item__product-price">@item.ProductPrice</p>
+                    <p class="cart-item__product-price">@item.ProductPrice.ToCurrencyString()</p>
                     <p class="cart-item__product-quantity">@item.Quantity</p>
                 </div>
             }
         </div>
 
-        <div class="cart__summary">
+        <div class="cart-summary">
             <h4 class="cart-summary__title">Cart Summary</h4>
-            <p class="cart-summary__total">Subtotal: @CartSummary.Subtotal</p>
-            <p class="cart-summary__saving">Savings: @CartSummary.Discount</p>
-            <p class="cart-summary__tax">Tax: @CartSummary.Tax</p>
-            <p class="cart-summary__grand-total">Total: @CartSummary.TotalPrice</p>
+            <p class="cart-summary__item">Subtotal: @CartSummary.Subtotal</p>
+            <p class="cart-summary__item">Savings: @CartSummary.Discount</p>
+            <p class="cart-summary__item">Tax: @CartSummary.Tax</p>
+            <p class="cart-summary__item">Total: @CartSummary.TotalPrice</p>
         </div>
-        <a href="/checkout" class="btn btn--md btn--primary">Checkout</a>
+        <NavLink href="/checkout" class="btn btn--md btn--primary cart-btn">Checkout</NavLink>
     }
     else
     {
-        <p class="cart-empty">Your cart is empty</p>
+        <p class="cart__empty">Your cart is empty</p>
     }
 
 
@@ -42,8 +42,7 @@
 
 @code {
 
-    [CascadingParameter]
-    private HttpContext? Context { get; set; }
+    [CascadingParameter] private HttpContext? Context { get; set; }
 
     private IEnumerable<CartItemListModel> CartItems { get; set; } = new List<CartItemListModel>();
 
@@ -61,3 +60,4 @@
     }
 
 }
+
