--- a/src/WebBlazor/wwwroot/css/dev/main.css
+++ b/src/WebBlazor/wwwroot/css/dev/main.css
@@ -514,6 +514,79 @@ body {
   flex-direction: column;
 }
 
+.shopping-cart {
+  display: grid;
+  grid-template-columns: 1fr 40rem;
+  column-gap: 20rem;
+  grid-template-rows: min-content min-content 1fr;
+  row-gap: 4rem;
+  height: 100%;
+  margin: 6.4rem 0;
+}
+
+.cart-title {
+  grid-column: 1/-1;
+  grid-row: 1/2;
+  align-self: center;
+  display: inline-block;
+  font-size: 4.8rem;
+}
+
+.cart-item-display {
+  grid-column: 1/2;
+  grid-row: 2/-1;
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
+}
+
+.cart-item {
+  display: flex;
+  align-items: center;
+  border-radius: 2rem;
+  overflow: hidden;
+  box-shadow: 0 0.25rem 1.25rem rgba(0, 0, 0, 0.15);
+}
+.cart-item__product-img {
+  display: inline-block;
+  width: 8rem;
+}
+.cart-item__product-name {
+  font-size: 1.4rem;
+  margin-left: 1.6rem;
+}
+.cart-item__product-price {
+  font-size: 1.2rem;
+  margin-left: 4.8rem;
+}
+.cart-item__product-quantity {
+  margin-left: auto;
+  margin-right: 3.2rem;
+}
+
+.cart-summary {
+  grid-column: 2/-1;
+  grid-row: 2/3;
+  background-color: #f5f5f5;
+  padding: 3.2rem;
+  border-radius: 2rem;
+}
+.cart-summary__title {
+  font-size: 1.8rem;
+  margin-bottom: 1.6rem;
+}
+.cart-summary__item {
+  font-size: 1.4rem;
+  margin-bottom: 1.6rem;
+}
+
+.cart-btn {
+  grid-column: 2/-1;
+  grid-row: 3/-1;
+  align-self: start;
+  justify-self: start;
+}
+
 .table {
   width: 100%;
   caption-side: bottom;
