Create logout functionality and set redirect for login

--- a/src/WebBlazor/Components/Layout/NavAccount.razor
+++ b/src/WebBlazor/Components/Layout/NavAccount.razor
@@ -27,7 +27,7 @@
             </svg>
             <span>Account</span>
         </a>
-        <a href="" class="nav__account-link">
+        <a href="/logout" class="nav__account-link">
             <svg class="nav__account-icon">
                 <use href="/img/icons/solid.svg#right-from-bracket"></use>
             </svg>
