--- a/src/WebClient/Components/DeliveryInfo.razor
+++ b/src/WebClient/Components/DeliveryInfo.razor
@@ -1,6 +1,6 @@
-
+@rendermode InteractiveAuto
 @using Application.DomainModels
-<WizardStep Name="delivery-info">
+<WizardStep Name="delivery-info" Title="Delivery Information">
     <EditForm EditContext="@EditContext" FormName="DeliveryAddressForm">
         <div>
             <label for="street">Street</label>
