Finished initial development of product details modal.

--- a/src/WebBlazor/Components/App.razor
+++ b/src/WebBlazor/Components/App.razor
@@ -12,7 +12,7 @@
     <HeadOutlet/>
 </head>
 
-<body>
+<body hx-boost>
 <Routes/>
 <script src="_framework/blazor.web.js"></script>
 <script src="lib/htmx/htmx.min.js"></script>
