--- a/src/WebBlazor/Components/Pages/Home.razor
+++ b/src/WebBlazor/Components/Pages/Home.razor
@@ -1,5 +1,4 @@
-﻿@using WebBlazor.Components.Static
-@using Application.DomainModels
+﻿@using Application.DomainModels
 @using Application.UnitOfWork
 @inherits OwningComponentBase<IUnitOfWork>
 
