Added header to home page.

--- a/src/WebBlazor/Components/Pages/Home.razor
+++ b/src/WebBlazor/Components/Pages/Home.razor
@@ -6,6 +6,10 @@
 
 <AppPageTitle>Home</AppPageTitle>
 
+<header class="layout layout__full">
+    <HeroHome />
+</header>
+
 <main class="layout layout__full main-home">
     <ProductSection Heading="Featured Products" FeaturedProducts="@Products"/>
 </main>
