--- a/src/WebBlazor/Components/_Imports.razor
+++ b/src/WebBlazor/Components/_Imports.razor
@@ -10,4 +10,6 @@
 @using WebBlazor
 @using WebBlazor.Components
 @using WebBlazor.Components.Shared
+@using WebBlazor.Components.Home
 @using WebClient.Components
+
