--- a/src/WebBlazor/wwwroot/css/dev/main.css
+++ b/src/WebBlazor/wwwroot/css/dev/main.css
@@ -957,4 +957,38 @@ body {
   margin: 6.4rem 0;
 }
 
+.hero-home {
+  grid-column: layout-start/layout-end;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  height: 50vh;
+  overflow: hidden;
+  margin-top: 4rem;
+}
+.hero-home__img {
+  display: block;
+  grid-column: 1/-1;
+  grid-row: 1/-1;
+  width: 100%;
+  object-fit: cover;
+  object-position: top;
+  border-radius: 5px;
+}
+.hero-home__content {
+  grid-column: 1/2;
+  grid-row: 1/-1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8rem;
+}
+.hero-home__heading {
+  font-size: 4.8rem;
+  font-weight: 300;
+  text-align: center;
+  color: #545454;
+}
+
 /*# sourceMappingURL=main.css.map */
