--- a/styles/scss/pages/_home.scss
+++ b/styles/scss/pages/_home.scss
@@ -4,3 +4,45 @@
   margin: var.$spacing-3xl 0;
 }
 
+.hero-home {
+  grid-column: layout-start / layout-end;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  height: 50vh;
+  overflow: hidden;
+
+
+  margin-top: 4rem;
+
+  &__img {
+    display: block;
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 5px;
+
+  }
+
+  &__content {
+    grid-column: 1 / 2;
+    grid-row: 1 / -1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 8rem;
+  }
+
+  &__heading {
+    font-size: 4.8rem;
+    font-weight: 300;
+    text-align: center;
+    color: var.$color-grey-dark-2;
+  }
+}
