--- a/src/WebBlazor/wwwroot/css/dev/main.css
+++ b/src/WebBlazor/wwwroot/css/dev/main.css
@@ -699,6 +699,44 @@ body {
   overflow-y: scroll;
 }
 
+.footer {
+  background-color: #1c2837;
+}
+.footer__content {
+  grid-column: layout-start/layout-end;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
+  padding: 8rem 4rem;
+}
+.footer__list {
+  display: flex;
+  gap: 2rem;
+}
+.footer__item {
+  list-style: none;
+}
+.footer__link:link, .footer__link:visited {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 1.75rem;
+  color: #d6d6d6;
+  padding-bottom: 0.15rem;
+  border-bottom: 1px solid transparent;
+  transition: all 200ms ease-in-out;
+}
+.footer__link:hover, .footer__link:active {
+  color: #f5f5f5;
+  border-bottom: 1px solid #f5f5f5;
+  transform: translateY(-2px) scale(1.01);
+}
+
+.copyright p {
+  font-size: 1.4rem;
+  color: #d6d6d6;
+}
+
 .layout {
   display: grid;
   grid-template-columns: [page-start] minmax(5rem, 1fr) [layout-start] repeat(12, [col-start] minmax(min-content, 12rem) [col-end]) [layout-end] minmax(5rem, 1fr) [page-end];
