--- a/styles/scss/layouts/_footer.scss
+++ b/styles/scss/layouts/_footer.scss
@@ -1,3 +1,57 @@
+@use "../abstracts/variables" as var;
+
 .footer {
-  
+  //height: 50rem;
+  background-color: var.$color-primary-dark;
+
+  &__content {
+    grid-column: layout-start / layout-end;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;
+
+    padding: 8rem 4rem;
+  }
+
+  &__list {
+    display: flex;
+    gap: 2rem;
+  }
+
+  &__item {
+    list-style: none;
+  }
+
+  &__link {
+    &:link,
+    &:visited {
+      display: inline-block;
+
+      text-decoration: none;
+      //font-family: var.$font-primary;
+      font-size: 1.75rem;
+      color: var.$color-grey-light-2;
+      padding-bottom: 0.15rem;
+      border-bottom: 1px solid transparent;
+      transition: all 200ms ease-in-out;
+    }
+
+    &:hover,
+    &:active {
+      color: var.$color-grey-light-1;
+      border-bottom: 1px solid var.$color-grey-light-1;
+
+      transform: translateY(-2px) scale(1.01);
+    }
+  }
+
+}
+
+.copyright {
+  p {
+    font-size: 1.4rem;
+    color: var.$color-grey-light-2;
+  }
 }
