Added MainHeader component.

--- a/src/WebBlazor/Components/Pages/Home.razor
+++ b/src/WebBlazor/Components/Pages/Home.razor
@@ -6,9 +6,9 @@
 
 <AppPageTitle>Home</AppPageTitle>
 
-<header class="layout layout__full">
+<MainHeader>
     <HeroHome />
-</header>
+</MainHeader>
 
 <main class="layout layout__full main-home">
     <ProductSection Heading="Featured Products" FeaturedProducts="@Products"/>
