--- a/src/WebBlazor/Components/_Imports.razor
+++ b/src/WebBlazor/Components/_Imports.razor
@@ -11,5 +11,6 @@
 @using WebBlazor.Components
 @using WebBlazor.Components.Shared
 @using WebBlazor.Components.Home
+@using WebBlazor.Components.Layout
 @using WebClient.Components
 
