Added search functionality.

--- a/src/WebBlazor/Components/Layout/MainLayout.razor
+++ b/src/WebBlazor/Components/Layout/MainLayout.razor
@@ -7,17 +7,7 @@
                 <img src="img/logo.png" alt="Sun Rays Market Logo"/>
             </a>
 
-            <form action="" class="search">
-                <input
-                    type="text"
-                    class="search__input"
-                    placeholder="Search for products"/>
-                <button class="search__button">
-                    <svg class="search__icon">
-                        <use href="/img/icons/solid.svg#magnifying-glass"></use>
-                    </svg>
-                </button>
-            </form>
+            <ProductSearch />
             <TopBarNav />
         </div>
     </div>
