--- a/src/WebBlazor/wwwroot/css/dev/main.css
+++ b/src/WebBlazor/wwwroot/css/dev/main.css
@@ -293,8 +293,11 @@ body {
   font-size: 1.2rem;
   font-weight: 700;
   margin-left: 2.4rem;
-  margin-top: 0.8rem;
+  margin-top: -1.15rem;
+  padding: 0 0.8rem;
+  background-color: #fff;
   display: block;
+  width: fit-content;
   transition: all 300ms;
   cursor: pointer;
 }
@@ -303,21 +306,18 @@ body {
   font-size: 1.6rem;
   width: 100%;
   padding: 1.6rem 2.4rem;
-  border-radius: 2px;
+  border-radius: 2rem;
   background-color: #fff;
-  border: none;
-  border-bottom: 3px solid transparent;
+  border: 2px solid #d6d6d6;
   display: block;
   transition: all 300ms;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
 }
 .form__input:focus {
   outline: none;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
-  border-bottom: 3px solid #339900;
+  border-color: #339900;
 }
 .form__input:focus:invalid {
-  border-bottom: 3px solid #cc3300;
+  border-color: #cc3300;
 }
 .form__input:placeholder-shown + .form__label--input {
   opacity: 0;
