--- a/styles/scss/components/_form.scss
+++ b/styles/scss/components/_form.scss
@@ -37,8 +37,11 @@
     font-size: var.$fs-xs;
     font-weight: var.$weight-bold;
     margin-left: var.$spacing-m;
-    margin-top: var.$spacing-xs;
+    margin-top: -1.15rem;
+    padding: 0 var.$spacing-xs;
+    background-color: #fff;
     display: block;
+    width: fit-content;
     transition: all 300ms;
     cursor: pointer;
   }
@@ -49,22 +52,21 @@
     font-size: var.$fs-m;
     width: 100%;
     padding: var.$spacing-s var.$spacing-m;
-    border-radius: 2px;
+    border-radius: 2rem;
     background-color: #fff;
-    border: none;
-    border-bottom: 3px solid transparent;
+    border: 2px solid var.$color-grey-light-2;
     display: block;
     transition: all 300ms;
-    box-shadow: 0 1rem 2rem rgba(#000, .1);
+    //box-shadow: 0 1rem 2rem rgba(#000, .1);
 
     &:focus {
       outline: none;
-      box-shadow: 0 1rem 2rem rgba(#000, .1);
-      border-bottom: 3px solid var.$color-success;
+      //box-shadow: 0 1rem 2rem rgba(#000, .1);
+      border-color: var.$color-success;
     }
 
     &:focus:invalid {
-      border-bottom: 3px solid var.$color-danger;
+      border-color: var.$color-danger;
     }
   }
 
