--- a/src/WebBlazor/wwwroot/css/dev/main.css
+++ b/src/WebBlazor/wwwroot/css/dev/main.css
@@ -28,6 +28,10 @@ html {
 }
 
 body {
+  background-color: #ecf0f5;
+}
+
+body {
   font-size: 1.6rem;
   font-family: "Open Sans", sans-serif;
 }
@@ -88,51 +92,60 @@ body {
 
 .product-card {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr 1fr min-content;
+  grid-template-columns: max-content 1fr;
+  grid-template-rows: min-content 16rem min-content 1fr min-content;
   border-radius: 10px;
   padding: 2.4rem;
   overflow: hidden;
-  box-shadow: 0 0.25rem 1.25rem rgba(0, 0, 0, 0.15);
+  background-color: #fff;
   transition: all 250ms ease-in-out;
 }
 .product-card:hover {
-  transform: translateY(-0.75rem) scale(1.05);
+  transform: translateY(-0.1rem) scale(1.01);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
 .product-card__screen {
   grid-column: 1/-1;
-  grid-row: 1/3;
+  grid-row: 1/-2;
   background-color: transparent;
   cursor: pointer;
   z-index: 20;
 }
 .product-card__img {
   grid-column: 1/-1;
-  grid-row: 1/3;
+  grid-row: 2/3;
+  justify-self: center;
   display: block;
-  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  object-position: center;
 }
 .product-card__product-name {
   grid-column: 1/-1;
-  grid-row: 2/3;
+  grid-row: 3/4;
   justify-self: center;
   align-self: end;
   font-size: 1.8rem;
   font-weight: 300;
   color: #545454;
+  margin-bottom: 0.8rem;
 }
 .product-card__price {
   grid-column: 1/2;
-  grid-row: 1/2;
+  grid-row: 4/5;
   align-self: start;
   justify-self: start;
 }
+.product-card__unit-price {
+  grid-column: 2/-1;
+  grid-row: 4/5;
+}
 .product-card__cart-controls {
   grid-column: 1/-1;
-  grid-row: 3/-1;
-  justify-self: center;
-  margin-top: 4rem;
+  grid-row: 5/-1;
+  align-self: end;
+  justify-self: end;
+  margin-top: 1.6rem;
 }
 .product-card__btn {
   text-transform: uppercase;
@@ -151,9 +164,9 @@ body {
   background-color: #2d4059;
 }
 .product-card__tag {
-  grid-column: 2/-1;
+  grid-column: 1/2;
   grid-row: 1/2;
-  justify-self: end;
+  justify-self: start;
   align-self: start;
 }
 
@@ -165,6 +178,11 @@ body {
 }
 .cart-controls--visible {
   display: flex;
+}
+.cart-controls__add-icon {
+  width: 1.8rem;
+  aspect-ratio: 1/1;
+  fill: #fff;
 }
 .cart-controls__remove-btn {
   border: none;
@@ -184,8 +202,9 @@ body {
   display: flex;
   align-items: center;
   gap: 1rem;
-  padding: 0.15rem 1rem;
-  border: 2px solid #3e5876;
+  border-radius: 2rem;
+  background-color: #1c2837;
+  padding: 0.8rem 1.6rem;
 }
 .quantity__btn {
   border: none;
@@ -206,17 +225,18 @@ body {
 .quantity__icon {
   width: 1.6rem;
   aspect-ratio: 1/1;
-  fill: #545454;
+  fill: #f5f5f5;
 }
 .quantity__input {
   font-size: 1.6rem;
   font-weight: 300;
-  color: #545454;
+  color: #f5f5f5;
   border: none;
-  padding: 0.5rem 1rem;
+  padding: 0 1rem;
   width: 4rem;
   text-align: center;
   appearance: textfield;
+  background-color: transparent;
 }
 .quantity__input:focus {
   outline: none;
@@ -250,6 +270,11 @@ body {
 .btn--lg, .btn--lg:link, .btn--lg:visited {
   padding: 2.4rem 4.8rem;
   font-size: 1.8rem;
+}
+.btn--round, .btn--round:link, .btn--round:visited {
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  padding: 0.8rem;
 }
 .btn--primary {
   background-color: #1c2837;
@@ -427,12 +452,11 @@ body {
 }
 
 .price {
+  --flex-direction: row;
   display: flex;
   align-items: center;
+  flex-direction: var(--flex-direction);
   gap: 0.35rem;
-}
-.price--vertical {
-  flex-direction: column;
 }
 .price__amount {
   font-size: 1.8rem;
@@ -440,6 +464,7 @@ body {
 }
 .price__amount--regular, .price__amount--sale {
   padding: 0.15rem 1rem;
+  border-radius: 1rem;
 }
 .price__amount--regular {
   color: #7a5900;
@@ -454,6 +479,10 @@ body {
 .price__amount--sale {
   color: #f5ccc2;
   background-color: hsl(12, 71%, 51%);
+}
+
+.unit-price {
+  color: #8c8c8c;
 }
 
 .product-details {
@@ -498,7 +527,6 @@ body {
 .product-details__unit-price {
   grid-column: 2/-1;
   justify-self: end;
-  color: #8c8c8c;
   margin-top: 1rem;
 }
 .product-details__description {
@@ -618,11 +646,12 @@ body {
 }
 
 .tag {
-  font-size: 1.4rem;
-  font-weight: 300;
+  font-size: 1.2rem;
+  font-weight: 600;
   color: #fff;
+  border-radius: 2rem;
   background-color: blue;
-  padding: 0.2rem 0.75rem;
+  padding: 0.4rem 1.6rem;
 }
 
 .wizard {
