--- a/styles/scss/base/_base.scss
+++ b/styles/scss/base/_base.scss
@@ -1,3 +1,4 @@
+@use "../abstracts/variables" as var;
 *,
 *::before,
 *::after {
@@ -9,4 +10,8 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; // set 1rem = 10px
+}
+
+body {
+  background-color: var.$color-background;
 }
