--- a/styles/scss/components/_cards.scss
+++ b/styles/scss/components/_cards.scss
@@ -10,24 +10,25 @@
 
 .product-card {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr 1fr min-content;
+  grid-template-columns: max-content 1fr;
+  grid-template-rows: min-content 16rem min-content 1fr min-content;
 
   border-radius: 10px;
   padding: var.$spacing-m;
   overflow: hidden;
-  box-shadow: 0 0.25rem 1.25rem rgba(#000, 0.15);
+  background-color: #fff;
+  //box-shadow: 0 0.25rem 1.25rem rgba(#000, 0.15);
   transition: all 250ms ease-in-out;
 
   &:hover {
-    transform: translateY(-0.75rem) scale(1.05);
+    transform: translateY(-0.1rem) scale(1.01);
     box-shadow: 0 1rem 2rem rgba(#000, 0.2);
 
   }
   
   &__screen {
     grid-column: 1  / -1;
-    grid-row: 1 / 3;
+    grid-row: 1 / -2;
     
     background-color: transparent;
     cursor: pointer;
@@ -36,17 +37,18 @@
 
   &__img {
     grid-column: 1 / -1;
-    grid-row: 1 / 3;
-
+    grid-row: 2 / 3;
+    justify-self: center;
+    
     display: block;
-    //object-fit: cover;
-    //object-position: top;
-    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    object-position: center;
   }
 
   &__product-name {
     grid-column: 1 / -1;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
     justify-self: center;
     align-self: end;
 
@@ -54,21 +56,28 @@
     font-size: var.$fs-l;
     font-weight: 300;
     color: var.$color-grey-dark-2;
+    margin-bottom: var.$spacing-xs;
   }
 
   &__price {
     grid-column: 1 / 2;
-    grid-row: 1 / 2;
+    grid-row: 4 / 5;
     align-self: start;
     justify-self: start;
   }
   
+  &__unit-price {
+    grid-column: 2 / -1;
+    grid-row: 4 / 5;
+  }
+  
   &__cart-controls {
     grid-column: 1 / -1;
-    grid-row: 3 / -1;
-    justify-self: center;
+    grid-row: 5 / -1;
+    align-self: end;
+    justify-self: end;
     
-    margin-top: var.$spacing-xl;
+    margin-top: var.$spacing-s;
   }
 
   &__btn {
@@ -84,10 +93,10 @@
   }
 
   &__tag {
-    grid-column: 2 / -1;
+    grid-column: 1 / 2;
     grid-row: 1 / 2;
 
-    justify-self: end;
+    justify-self: start;
     align-self: start;
   }
 }
